Fix date picker internationalization and UX improvements
- Replace hardcoded English month names and week days with translation keys
- Add month translations to all locale files (en, es, fr)
- Improve date picker visibility with better contrast and larger touch targets
- Add prominent confirmation button with check mark
- Enhance visual feedback for selected dates and times
- Remove unused screenHeight variable
- Ensure all text is properly internationalized

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,6 +100,20 @@
       "thu": "Thu",
       "fri": "Fri",
       "sat": "Sat"
+    },
+    "months": {
+      "january": "January",
+      "february": "February",
+      "march": "March",
+      "april": "April",
+      "may": "May",
+      "june": "June",
+      "july": "July",
+      "august": "August",
+      "september": "September",
+      "october": "October",
+      "november": "November",
+      "december": "December"
     }
   },
   "home": {
