feat: support multiple family member assignments for reminders
- Updated types to support assignedTo as string[] instead of string
- Enhanced add screen UI with checkboxes and multiple selection
- Added assignment summary showing selected members
- Updated reminder display to handle multiple assignments
- Added translation keys for multiple assignment support
- Updated TimeBlock and trash components for array format
- Improved getAssignedUserName function to format multiple names

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,9 @@
     "assignTo": "Assign To (Optional)",
     "assignToPlaceholder": "Assign to family member",
     "unassigned": "Unassigned",
+    "assigned": "Assigned",
+    "assignedTo1": "Assigned to {{name}}",
+    "assignedToMultiple": "Assigned to {{count}} members",
     "favorite": "Mark as favorite",
     "notifications": "Enable notifications",
     "notificationTiming": "Notification Timing",
