--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -11,9 +11,12 @@
     "locationPlaceholder": "Agregar ubicación",
     "tags": "Etiquetas",
     "tagPlaceholder": "Agregar una etiqueta",
-    "assignTo": "Asignar A (Opcional)",
+    "assignTo": "Asignar a (Opcional)",
     "assignToPlaceholder": "Asignar a miembro de la familia",
     "unassigned": "Sin asignar",
+    "assigned": "Asignado",
+    "assignedTo1": "Asignado a {{name}}",
+    "assignedToMultiple": "Asignado a {{count}} miembros",
     "favorite": "Marcar como favorito",
     "notifications": "Habilitar notificaciones",
     "recurring": "Hacer recurrente",
