--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,9 +11,12 @@
     "locationPlaceholder": "Ajouter un emplacement",
     "tags": "Étiquettes",
     "tagPlaceholder": "Ajouter une étiquette",
-    "assignTo": "Assigner À (Optionnel)",
+    "assignTo": "Assigner à (Optionnel)",
     "assignToPlaceholder": "Assigner à un membre de la famille",
     "unassigned": "Non assigné",
+    "assigned": "Assigné",
+    "assignedTo1": "Assigné à {{name}}",
+    "assignedToMultiple": "Assigné à {{count}} membres",
     "favorite": "Marquer comme favori",
     "notifications": "Activer les notifications",
     "recurring": "Rendre récurrent",
